--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
   "require": {
-     "j7mbo/twitter-api-php": "dev-master",
-     "phpunit/phpunit": "~4.0"
+     "j7mbo/twitter-api-php": "dev-master"
   },
   "autoload": {
     "psr-4": {
